# is3-broker-rl

./: .flake8  .gitattributes  .gitignore  README.md  cartpole_example.py  cartpole_test.py  example.env  main_policy_client.py  main_wholesale_policy_server.py  pyproject.toml  requirements.txt  tox.ini
is3_broker_rl/: __init__.py  main.py  main_policy_client.py  main_policy_server.py  main_wholesale_policy_server.py  utils.py
is3_broker_rl/api/: __init__.py  consumption_tariff_controller.py  dto.py  fastapi_app.py  models.py  observation_controller.py  wholesale_controller.py  wholesale_dto.py
is3_broker_rl/conf/: __init__.py  log.py
is3_broker_rl/model/: consumption_tariff_config.py  consumption_tariff_policy_server.py  normalize_reward_callback.py  wholesale_callbacks.py  wholesale_custom_model.py  wholesale_policy_server.py  wholesale_stats.py  wholesale_util.py
is3_broker_rl/offline/: consumption_dataset.py  extractors.py
notebooks/: consumption_tariff.ipynb  consumption_tariff_debugging.ipynb  consumption_tariff_experiment1.ipynb  consumption_tariff_trial1_test.ipynb  consumption_tariff_trial2_consumption_training1.ipynb  consumption_tariff_trial2_consumption_training2.ipynb  consumption_tariff_trial2_consumption_training3.ipynb  consumption_tariff_trial2_test2.ipynb  consumption_tariff_trial2_test3.ipynb  consumption_tariff_trial3_consumption_training1.ipynb  consumption_tariff_trial3_consumption_training2.ipynb  consumption_tariff_trial3_consumption_training4.ipynb  consumption_tariff_trial3_consumption_training5.ipynb  consumption_tariff_trial3_consumption_training6.ipynb  consumption_tariff_trial3_consumption_training7.ipynb  consumption_tariff_trial3_training1.ipynb  consumption_tariff_trial_1_1.ipynb  consumption_tariff_trial_1_2.ipynb  consumption_tariff_trial_2022_06_5.ipynb  consumption_tariff_trial_2022_06_6.ipynb  thesis_plots.ipynb  wholesale-analysis.ipynb  wholesale-analysisSSH.ipynb  wholesale-reward-util.ipynb  wholesale-reward.ipynb
notebooks/wholesale-analysis/: wholesale-analysis_25.07_re3_nn_big.ipynb
python_starter/: hello.py
tests/: test_is3_broker_rl.py  test_python_starter.py
tests_api/: end_episode.http  get_action.http  log_returns.http  start_episode.http
