[tool.poetry]
name = "is3-broker-rl"
version = "0.1.0"
description = "A Python starter template with Poetry and tox."
authors = ["Philipp Page <github@philipp-page.de>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
ray = { extras = ["rllib", "serve", "tune"], version = "1.13.0" }
tensorflow = { version = "^2.9.1", markers = "sys_platform == 'win32' or sys_platform == 'linux' or (sys_platform == 'darwin' and platform_machine != 'arm64')" }
tensorflow-macos = { version = "^2.9.1", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
python-dotenv = "^0.20.0"
gym = "^0.21.0"
numpy = "^1.23.0"
pandas = "^1.4.3"
fastapi = "^0.78.0"
pydantic = "^1.9.1"
tensorflow-probability = "^0.17.0"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
tox = "^3.24.4"
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^4.0.1"
mypy = "^0.961"
pytest-cov = "^3.0.0"
tensorboard = "^2.9.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
jupyterlab = "^3.4.3"
jupyterlab-code-formatter = "^1.4.11"
typing-extensions = "^4.3.0"
papermill = "^2.3.4"
notebook = "^6.4.12"
shap = "^0.41.0"
statsmodels = "^0.13.5"
is3-powertac-analysis = {git = "ssh://git@github.com/IS3UniCologne/is3-powertac-analysis"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
files = "is3_broker_rl"
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"
